UPC2 - fixed box shadows and improved spacing.

--- a/unitpricecomparison2/styles.css
+++ b/unitpricecomparison2/styles.css
@@ -10,11 +10,18 @@ body {
 
 h3 {
   font-size: 3rem;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
 
 .expandButton, .clearAllButton {
   height: 4rem;
+}
+
+.itemCard {
+  box-shadow: 0px 0px 10px #000000;
+  margin:5px;
+  margin-bottom: 17px;
 }
 
 input, .expandButton, .clearAllButton {
@@ -34,13 +41,6 @@ input{
 .itemPricePerUnits {
   display: inline-block;
   text-align: left;
-}
-
-.itemCard {
-  padding: 10px;
-
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.2s ease-in-out;
 }
 
 .quantity {
